--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "core-js": "^3.8.3",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -39,5 +44,17 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prdcut/foodtrack-api.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/prdcut/foodtrack-api/issues"
+  },
+  "homepage": "https://github.com/prdcut/foodtrack-api#readme"
 }
