--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.0",
     "core-js": "^3.8.3",
     "express": "^4.18.1",
+    "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2",
     "vue": "^3.2.13"
