--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "body-parser": "^1.20.0",
     "core-js": "^3.8.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "uuid": "^8.3.2",
     "vue": "^3.2.13"
   },
